Bug 894405 - Ref GLContext before sending SurfaceStream to compositor r=jgilbert